@@ -1,5 +1,6 @@
 Revision history for DBIx::Class
-
+        - fixed storage->connected fork bug
+          (test and fix from Radu Greab)
         - refactor Statistics to create debugging filehandle to fix bug with
           closed STDERR, update docs and modify Versioned to use Statistics
           (original fix from diz)
